[project]
name = "cas-toolbox"
version = "2025.20.1"
description = "Cluster Automation Scripts Toolbox"
readme = "README.md"
requires-python = ">=3.6"
dependencies = [
    "hpcp==9.20",
    "multicmd==1.29",
    "multissh3==5.69",
    "simple-iotest==3.59.6",
    "statbtrfs==0.21",
    "tee-logger==6.37",
    "tsvz==3.25",
]
authors = [
    { name = "Yufei Pan", email = "pan@zopyr.us" }
]
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Operating System :: POSIX :: Linux",
]
license = {text = "GPL-3.0-or-later"}

[project.scripts]
hpcp = "hpcp:main"
mcmd = "multiCMD:main"
multicmd = "multiCMD:main"
multiCMD = "multiCMD:main"
mssh = "multiSSH3:main"
mssh3 = "multiSSH3:main"
multissh = "multiSSH3:main"
multissh3 = "multiSSH3:main"
multiSSH3 = "multiSSH3:main"
iotest = "iotest:climain"
statbtrfs = "statbtrfs:main"
TSVZ = "TSVZ:__main__"
tsvz = "TSVZ:__main__"


[project.urls]
'Homepage' = "https://github.com/yufei-pan/cas-toolbox"
'hpcp' = "https://github.com/yufei-pan/hpcp"
"multiCMD" = "https://github.com/yufei-pan/multiCMD"
"multiSSH3" = "https://github.com/yufei-pan/multiSSH3"
"simple-iotest" = "https://github.com/yufei-pan/simple-iotest"
"statbtrfs" = "https://github.com/yufei-pan/statbtrfs"
"Tee_Logger" = "https://github.com/yufei-pan/Tee_Logger"
"TSVZ" = "https://github.com/yufei-pan/TSVZ"
"iotest" = "https://github.com/yufei-pan/simple-iotest"
