[project]
name = "cas-toolbox"
version = "2025.47.2"
description = "Cluster Automation Scripts Toolbox"
readme = "README.md"
requires-python = ">=3.6"
dependencies = [
    "hpcp==9.41",
    "multicmd==1.40",
    "multissh3==6.06",
    "simple-iotest==3.61.2",
    "statbtrfs==0.25",
    "tee-logger==6.37",
    "tsvz==3.35",
    "statblk==1.34",
]
authors = [
    { name = "Yufei Pan", email = "pan@zopyr.us" }
]
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Operating System :: POSIX :: Linux",
]
license = {text = "GPL-3.0-or-later"}

[project.scripts]
hpcp = "hpcp:main"
mcmd = "multiCMD:main"
multicmd = "multiCMD:main"
multiCMD = "multiCMD:main"
mssh = "multiSSH3:main"
mssh3 = "multiSSH3:main"
multissh = "multiSSH3:main"
multissh3 = "multiSSH3:main"
multiSSH3 = "multiSSH3:main"
iotest = "iotest:climain"
statbtrfs = "statbtrfs:main"
TSVZ = "TSVZ:__main__"
tsvz = "TSVZ:__main__"
statblk = "statblk:main"


[project.urls]
'Homepage' = "https://github.com/yufei-pan/cas-toolbox"
'hpcp' = "https://github.com/yufei-pan/hpcp"
"multiCMD" = "https://github.com/yufei-pan/multiCMD"
"multiSSH3" = "https://github.com/yufei-pan/multiSSH3"
"simple-iotest" = "https://github.com/yufei-pan/simple-iotest"
"statbtrfs" = "https://github.com/yufei-pan/statbtrfs"
"Tee_Logger" = "https://github.com/yufei-pan/Tee_Logger"
"TSVZ" = "https://github.com/yufei-pan/TSVZ"
"iotest" = "https://github.com/yufei-pan/simple-iotest"
